# backend/controllers/BooksController.js
@@ -13,91 +13,6 @@ const getBooks = asyncHandler(async (req, res) => {
   else res.status(200).json(books);
 });
 
-const getBooksFiltered = asyncHandler(async (req, res) => {
-  const { page, limit, popularity, name, date, author, subject, searchInput } =
-    req.query;
-
-  // Sorting
-  let sort = {};
-  if (name) sort.title = name === "desc" ? -1 : 1;
-  if (author) sort.author = author === "desc" ? -1 : 1;
-  if (popularity) sort.popularity = popularity === "desc" ? -1 : 1;
-  if (date) sort.publication_year = date === "desc" ? -1 : 1;
-
-  // Pagination
-  const pageNumber = parseInt(page) || 1;
-  const pageSize = parseInt(limit) || 10;
-  const skip = (pageNumber - 1) * pageSize;
-
-  let Books = [];
-  let totalBooks = 0;
-  const query = subject && subject.trim() !== "" ? { subject } : {};
-
-  if (searchInput) {
-    const pipeline = [];
-
-    if (subject && subject.trim() !== "") {
-      pipeline.push({ $match: { subject } });
-    }
-    if (sort && Object.keys(sort).length > 0) {
-      pipeline.push({ $sort: sort });
-    }
-
-    pipeline.push({
-      $search: {
-        index: "titleSearchIndex",
-        text: {
-          query: searchInput, // Replace with your input
-          path: "title",
-          fuzzy: {
-            maxEdits: 2, // Up to 2 character edits
-            prefixLength: 1, // (optional) require first character to match
-            maxExpansions: 50, // (optional) limit fuzzy candidates
-          },
-        },
-      },
-    });
-
-    // Count total results
-    const countResults = await book.aggregate([
-      ...pipeline,
-      { $count: "total" },
-    ]);
-
-    totalBooks = countResults[0]?.total || 0;
-
-    console.log(pipeline);
-
-    // Get paginated results
-    Books = await book.aggregate([
-      ...pipeline,
-      {
-        $project: {
-          _id: 1,
-          title: 1,
-          cover_image_url: 1,
-          score: { $meta: "searchScore" },
-        },
-      },
-      { $skip: skip },
-      { $limit: pageSize },
-    ]);
-  } else {
-    totalBooks = await book.countDocuments(query);
-
-    Books = await book
-      .find(query)
-      .sort(sort)
-      .skip(skip)
-      .limit(pageSize)
-      .select("_id title title_ge cover_image_url");
-  }
-
-  const pages = Math.ceil(totalBooks / pageSize);
-
-  res.status(200).json({ pages, Books });
-});
-
 const getBook = asyncHandler(async (req, res) => {
   /* #swagger.summary = 'Get a book by ID' */
   const { id } = req.params;
@@ -111,41 +26,6 @@ const getBook = asyncHandler(async (req, res) => {
   }
 
   res.status(200).json(foundBook);
-});
-
-const getBooksPreview = asyncHandler(async (req, res) => {
-  /* #swagger.summary = 'Search and Preview Books by Title' */
-  const { searchInput, page = 1, limit = 10 } = req.query;
-
-  const pageNumber = parseInt(page);
-  const pageSize = parseInt(limit);
-  const skip = (pageNumber - 1) * pageSize;
-
-  const results = await book.aggregate([
-    {
-      $search: {
-        index: "titleSearchIndex",
-        text: {
-          query: searchInput,
-          path: "title",
-          fuzzy: { maxEdits: 2 },
-        },
-      },
-    },
-    {
-      $project: {
-        _id: 1,
-        title: 1,
-        cover_image_url: 1,
-        score: { $meta: "searchScore" },
-      },
-    },
-    { $sort: { score: -1 } },
-    { $skip: skip },
-    { $limit: pageSize },
-  ]);
-
-  res.status(200).json(results);
 });
 
 const createBook = asyncHandler(async (req, res) => {
@@ -402,9 +282,7 @@ const deleteBook = asyncHandler(async (req, res) => {
 });
 
 module.exports = {
-  getBooksPreview,
   getBooks,
-  getBooksFiltered,
   createBook,
   getBook,
   updateBook,
