# backend/routes/articleRoutes.js
@@ -15,9 +15,9 @@ const {
 
 router.get("/getArticles", deserializeUser, getArticles);
 
-router.post("/postArticle", deserializeUser, upload.single, postArticle);
+router.post("/postArticle", deserializeUser, upload.single('cover_image'), postArticle);
 
-router.put("/editArticle/:id", deserializeUser, upload.single, editArticle);
+router.put("/editArticle/:id", deserializeUser, upload.single('cover_image'), editArticle);
 
 router.delete("/deleteArticle/:id", deserializeUser, deleteArticle);
 
